branches/libbulletc/src/btMultiBody_wrap.h


	EXPORT void btMultiBody_setupRevolute2(btMultiBody* obj, int i, btScalar mass, const btScalar* inertia, int parent, const btScalar* zero_rot_parent_to_this, const btScalar* joint_axis, const btScalar* parent_axis_position, const btScalar* my_axis_position, bool disableParentCollision);

	EXPORT void btMultiBody_setUseGyroTerm(btMultiBody* obj, bool useGyro);

	EXPORT void btMultiBody_setWorldToBaseRot(btMultiBody* obj, const btScalar* rot);

	EXPORT void btMultiBody_stepPositions(btMultiBody* obj, btScalar dt);

	EXPORT void btMultiBody_stepVelocities(btMultiBody* obj, btScalar dt, btAlignedScalarArray* scratch_r, btAlignedVector3Array* scratch_v, btAlignedMatrix3x3Array* scratch_m);

	EXPORT void btMultiBody_wakeUp(btMultiBody* obj);

	EXPORT void btMultiBody_worldDirToLocal(btMultiBody* obj, int i, const btScalar* vec, btScalar* value);

	EXPORT void btMultiBody_worldPosToLocal(btMultiBody* obj, int i, const btScalar* vec, btScalar* value);

	EXPORT void btMultiBody_delete(btMultiBody* obj);